<resources>
    <string name="app_name">Calculator</string>
    <string name="btn_text_1">1</string>
    <string name="calcular">calcular</string>
    <string name="btn_text_2">2</string>
    <string name="btn_text_3">3</string>
    <string name="btn_text_sub">-</string>
    <string name="btn_text_add">+</string>
    <string name="btn_text_dot">.</string>
    <string name="btn_text_0">0</string>
    <string name="btn_text_4">4</string>
    <string name="btn_text_5">5</string>
    <string name="btn_text_6">6</string>
    <string name="btn_text_split">÷</string>
    <string name="btn_text_mult">x</string>
    <string name="btn_text_equal">=</string>
    <string name="btn_text_7">7</string>
    <string name="btn_text_8">8</string>
    <string name="btn_text_9">9</string>
    <string name="btn_text_c">c</string>
    <string name="message_exp_incorrect">La expresion es incorrecta</string>
</resources>