<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiLayuout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        <EditText
                android:id="@+id/etInput"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input"
                android:hint="@string/calcular"
                android:layout_margin="@dimen/margin"
                android:singleLine="true"
                android:maxLines="1"
                android:inputType="none"
                android:gravity="end|center_vertical"
                android:textIsSelectable="true"
                android:drawablePadding="16dp"
                android:drawableEnd="@drawable/baseline_backspace_36"
                />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llMainLeft"
            android:layout_width="@dimen/layout_wight"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:orientation="vertical"
            android:layout_below="@+id/tiLayuout"
            >

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSeven"
                android:text="@string/btn_text_7"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height"
                style="@style/btn_number"
        />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFour"
                android:text="@string/btn_text_4"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height"
                style="@style/btn_number"
        />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOne"
                android:text="@string/btn_text_1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height"
                style="@style/btn_number"
        />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDot"
                android:text="@string/btn_text_dot"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height"
                style="@style/btn_operator"
        />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llMainRight"
            android:layout_width="@dimen/layout_wight"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:orientation="vertical"
            android:layout_below="@+id/tiLayuout"
            android:layout_toEndOf="@+id/llMainLeft"
    >

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEight"
                android:text="@string/btn_text_8"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height"
                style="@style/btn_number"
        />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFive"
                android:text="@string/btn_text_5"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height"
                style="@style/btn_number"
        />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTwo"
                android:text="@string/btn_text_2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height"
                style="@style/btn_number"
        />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnZero"
                android:text="@string/btn_text_0"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height"
                style="@style/btn_number"
        />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <RelativeLayout
            android:id="@+id/rlOperator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_below="@id/tiLayuout"
            android:layout_toEndOf="@id/llMainRight"
            >

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNine"
                android:text="@string/btn_text_9"
                android:layout_width="@dimen/layout_wight"
                android:layout_height="@dimen/btn_height"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                style="@style/btn_number"
        />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnClean"
                android:text="@string/btn_text_c"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_toEndOf="@id/btnNine"
                style="@style/btn_clear"
        />

        <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llMiddle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:orientation="horizontal"
                android:layout_below="@id/btnNine"
        >

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSix"
                    android:text="@string/btn_text_6"
                    android:layout_width="@dimen/layout_wight"
                    android:layout_height="@dimen/btn_height"
                    style="@style/btn_number"
            />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSplit"
                    android:text="@string/btn_text_split"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn_height"
                    android:layout_weight="50"
                    android:layout_marginStart="@dimen/margin"
                    style="@style/btn_operator"
            />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnMult"
                    android:text="@string/btn_text_mult"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn_height"
                    android:layout_weight="50"
                    android:layout_marginHorizontal="@dimen/margin"
                    android:textAllCaps="false"
                    style="@style/btn_operator"
            />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:orientation="horizontal"
                android:layout_below="@id/llMiddle"
        >

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnThree"
                    android:text="@string/btn_text_3"
                    android:layout_width="@dimen/layout_wight"
                    android:layout_height="@dimen/btn_height"
                    style="@style/btn_number"
            />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSub"
                    android:text="@string/btn_text_sub"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn_height"
                    android:layout_weight="50"
                    android:layout_marginStart="@dimen/margin"
                    style="@style/btn_operator"
            />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAdd"
                    android:text="@string/btn_text_add"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn_height"
                    android:layout_weight="50"
                    android:layout_marginHorizontal="@dimen/margin"
                    style="@style/btn_operator"
            />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEqual"
            android:text="@string/btn_text_equal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginHorizontal="@dimen/margin"
            android:layout_toEndOf="@id/llMainRight"
            android:layout_below="@id/rlOperator"
            style="@style/btn_equal"
    />

</RelativeLayout>